Noisy logs